crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__field_8_7_escape_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#1 : @constr[0](int, int, int, int, int, int, int, int) = constr 0 0 1 2 3 4 5 6 7 in
let subject#2 : @constr[0](int, int, int, int, int, int, int, int) = subject#1 in
constr 0 (field@7/8 subject#2) (field@7/8 subject#2)
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_1
    [(lam subject_2
      (constr 0
        (case
          subject_2
          (lam generated_3
            (lam generated_4
              (lam generated_5
                (lam generated_6
                  (lam generated_7
                    (lam generated_8 (lam generated_9 (lam generated_10 generated_10)))))))))
        (case
          subject_2
          (lam generated_11
            (lam generated_12
              (lam generated_13
                (lam generated_14
                  (lam generated_15
                    (lam generated_16 (lam generated_17 (lam generated_18 generated_18)))))))))))
      subject_1])
    (constr 0
      (con integer 0)
      (con integer 1)
      (con integer 2)
      (con integer 3)
      (con integer 4)
      (con integer 5)
      (con integer 6)
      (con integer 7))])
--- optimized Core
constr 0 7 7
--- optimized UPLC
(program 1.1.0 (constr 0 (con integer 7) (con integer 7)))
--- isolated pass
--- isolated ANF input
let subject#1 : @constr[0](int, int, int, int, int, int, int, int) = constr 0 0 1 2 3 4 5 6 7 in
let subject#2 : @constr[0](int, int, int, int, int, int, int, int) = subject#1 in
let anf#3 : int = field@7/8 subject#2 in
let anf#4 : int = field@7/8 subject#2 in
constr 0 anf#3 anf#4
--- isolated folded Core
let field#5 : int = 0 in
let field#6 : int = 1 in
let field#7 : int = 2 in
let field#8 : int = 3 in
let field#9 : int = 4 in
let field#10 : int = 5 in
let field#11 : int = 6 in
let field#12 : int = 7 in
let subject#1 : @constr[0](int, int, int, int, int, int, int, int) = constr 0 field#5 field#6 field#7 field#8 field#9 field#10 field#11 field#12 in
let subject#2 : @constr[0](int, int, int, int, int, int, int, int) = subject#1 in
let anf#3 : int = field#12 in
let anf#4 : int = field#12 in
constr 0 anf#3 anf#4
--- isolated cleaned Core
constr 0 7 7
--- isolated UPLC before
(program 1.1.0
  [(lam subject_1
    [(lam subject_2
      [(lam anf_3
        [(lam anf_4 (constr 0 anf_3 anf_4))
          (case
            subject_2
            (lam generated_5
              (lam generated_6
                (lam generated_7
                  (lam generated_8
                    (lam generated_9
                      (lam generated_10 (lam generated_11 (lam generated_12 generated_12)))))))))])
        (case
          subject_2
          (lam generated_13
            (lam generated_14
              (lam generated_15
                (lam generated_16
                  (lam generated_17
                    (lam generated_18 (lam generated_19 (lam generated_20 generated_20)))))))))])
      subject_1])
    (constr 0
      (con integer 0)
      (con integer 1)
      (con integer 2)
      (con integer 3)
      (con integer 4)
      (con integer 5)
      (con integer 6)
      (con integer 7))])
--- isolated UPLC after
(program 1.1.0 (constr 0 (con integer 7) (con integer 7)))
--- result
(constr 0 (con integer 7) (con integer 7))
--- logs
[]
