crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__field_extra_fields.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
field@0/1 (constr 0 1 2)
--- unoptimized UPLC
(program 1.1.0
  (case (constr 0 (con integer 1) (con integer 2)) (lam generated_1 generated_1)))
--- optimized Core
let anf#1 : @constr[0](int, int) = constr 0 1 2 in
field@0/1 anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 (case anf_2 (lam generated_3 generated_3)))
    (constr 0 (con integer 1) (con integer 2))])
--- isolated pass
--- isolated ANF input
let anf#2 : @constr[0](int, int) = constr 0 1 2 in
field@0/1 anf#2
--- isolated folded Core
let anf#2 : @constr[0](int, int) = constr 0 1 2 in
field@0/1 anf#2
--- isolated cleaned Core
let anf#2 : @constr[0](int, int) = constr 0 1 2 in
field@0/1 anf#2
--- isolated UPLC before
(program 1.1.0
  [(lam anf_2 (case anf_2 (lam generated_3 generated_3)))
    (constr 0 (con integer 1) (con integer 2))])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_2 (case anf_2 (lam generated_3 generated_3)))
    (constr 0 (con integer 1) (con integer 2))])
--- result
error: NonFunctionApplication(Con(Integer(2)), Con(Integer(1)))
--- logs
[]
