crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__field_missing_field_returns_function.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
field@0/2 (constr 0 7) 9
--- unoptimized UPLC
(program 1.1.0
  [(case
    (constr 0 (con integer 7))
    (lam generated_1 (lam generated_2 generated_1)))
    (con integer 9)])
--- optimized Core
let anf#1 : @constr[0](int) = constr 0 7 in
let anf#2 : 'erased = field@0/2 anf#1 in
anf#2 9
--- optimized UPLC
(program 1.1.0
  [(lam anf_3
    [(lam anf_4 [anf_4 (con integer 9)])
      (case anf_3 (lam generated_5 (lam generated_6 generated_5)))])
    (constr 0 (con integer 7))])
--- isolated pass
--- isolated ANF input
let anf#3 : @constr[0](int) = constr 0 7 in
let anf#4 : 'erased = field@0/2 anf#3 in
anf#4 9
--- isolated folded Core
let anf#3 : @constr[0](int) = constr 0 7 in
let anf#4 : 'erased = field@0/2 anf#3 in
anf#4 9
--- isolated cleaned Core
let anf#3 : @constr[0](int) = constr 0 7 in
let anf#4 : 'erased = field@0/2 anf#3 in
anf#4 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_3
    [(lam anf_4 [anf_4 (con integer 9)])
      (case anf_3 (lam generated_5 (lam generated_6 generated_5)))])
    (constr 0 (con integer 7))])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_3
    [(lam anf_4 [anf_4 (con integer 9)])
      (case anf_3 (lam generated_5 (lam generated_6 generated_5)))])
    (constr 0 (con integer 7))])
--- result
(con integer 7)
--- logs
[]
